--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,7 @@
-aiohttp==3.8.5
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-async-timeout==4.0.2
-attrs==23.1.0
-certifi==2023.7.22
-charset-normalizer==3.2.0
-distlib==0.3.7
-filelock==3.12.2
-frozenlist==1.4.0
-idna==3.4
-memory-profiler==0.61.0
-multidict==6.0.4
-platformdirs==3.10.0
-psutil==5.9.5
-PyJWT==2.8.0
+asgiref==3.7.2
+Django==4.2.3
+djangorestframework==3.14.0
+mysqlclient==2.2.0
 pytz==2023.3
-requests==2.31.0
-twilio==8.5.0
-urllib3==2.0.4
-virtualenv==20.24.2
-yarl==1.9.2
+sqlparse==0.4.4
+tzdata==2023.3
